# Medial-IPC

./: .gitignore  CMakeLists.txt  MatrixCore.h  SimFramework.h  SimFramework.vcxproj  main.cpp
CMake/cmake_modules/: FindMKL.cmake  FindQGLViewer.cmake
Commom/: AutoFlipSVD.h  DataCore.h  EigenMatrixIO.h  FileIO.h  PolynomialSolver.h  SparseMatrixTopology.h
Model/: BaseModel.cpp  BaseModel.h  GeometryElement.cpp  GeometryElement.h
Model/MedialMesh/: BaseMedialMedialHandle.h  BaseMedialMesh.cpp  BaseMedialMesh.h  BaseMedialMeshBufferPool.h
Model/TriangleMesh/: BaseRenderMaterial.cpp  BaseSurfaceHandle.h  BaseSurfaceMesh.cpp  BaseSurfaceMesh.h  BaseSurfaceMeshBufferPool.h
Model/VolumetricMesh/: BaseTetMesh.cpp  BaseTetMesh.h  BaseTetMeshBufferPool.h  BaseTetMeshHandle.cpp  BaseTetMeshHandle.h  BaseTetMeshMaterial.h
Model/VolumetricMesh/IsotropicMaterial/: IsotropicMaterial.h  VolumetricMeshENuMaterial.h
Scene/: BaseLighting.cpp  BaseScene.cpp  BaseScene.h
Shader/: ScreenFontType.h
Simulator/: BaseSimulator.cpp  BaseSimulator.h  SimulatorFactor.h
Simulator/CollisionDetection/: CollisionDetectionMedialMesh.cpp  CollisionDetectionMedialMesh.h  CollisionDetectionMedialMesh11.cpp  CollisionDetectionMedialMesh11.h
Simulator/Cuda/: CudaHandle.cpp  CudaHandle.h  CudaHeader.cuh
Simulator/FiniteElementMethod/: FemModel.cpp  FemModel.h  FemSimulator.cpp  FemSimulator.h  ImplicitNewMarkSolverConfig.h
Simulator/FiniteElementMethod/Reduced/: ReducedFrame.cpp  ReducedFrame.h
Simulator/mipc/: MPsCCD.cuh  MipcConstraint.h  MipcModel.cpp  MipcModel.h  MipcSimulator.cpp  MipcSimulator.h  gpuFunc.cu  gpuFunc.cuh
Ui/: BaseBottomWidget.cpp  BaseBottomWidget.h  BaseMainWidget.cpp  BaseMainWidget.h  BaseMaterialEditWidget.h  BaseRightWidget.cpp  BaseRightWidget.h  BaseToolBar.cpp  ColorSelectionPanel.cpp  ColorSelectionPanel.h
docker/: Dockerfile  build.sh  run.sh
example/test/: test.xml
icon/: ui_icon.qrc
